--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created for use the pokeapi"
+      content="Sitio web creado para pokeapi"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>PokeApi</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript></noscript>
     <div id="root"></div>
   </body>
 </html>
